fix: font and spacing to match mockup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@ html,
 body {
   height: 100%;
   font-family: "Noto Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
@@ -103,6 +105,7 @@ h6 {
 .song {
   padding-top: 16px;
   padding-bottom: 16px;
+  padding-left: 16px;
   display: flex;
   flex-direction: column;
 }
